--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.525.0",
     "moongose": "^1.0.0",
+    "motion": "^12.23.24",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-clock": "^6.0.0",
