--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.525.0",
     "moongose": "^1.0.0",
     "motion": "^12.23.24",
